# Progetto-SO-Threads

./: CMakeLists.txt  README.md  area_menu.c  area_menu.h  collisioni.c  collisioni.h  generazione_movimenti.c  generazione_movimenti.h  macro.h  main.c  makefile  menu.c  menu.h  stampa.c  stampa.h
